testsuite/tests/vdq-rta/should_fail/T24159_type_syntax_th_fail.script
:set -XRequiredTypeArguments -XTemplateHaskell -XGHC2021
import Language.Haskell.TH (typeE)
f :: forall a -> Num a => a; f _ = 42
f $(typeE [t|Int|])   -- requires -XExplicitNamespaces
